# helpRust

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
helper/: Cargo.toml
helper/src/: alias.rs  key.rs  lib.rs
proc_macro/: Cargo.toml
src/: GAT.rs  _def_arg_builder.rs  argAorB.rs  argSliceOrStr.rs  call function by string workaround.rs  cliColor.rs  closure.rs  closure_test.rs  comptime.rs  const_array.rs  csv_helper.rs  enum.rs  format.rs  fut.rs  global file var.rs  logging.rs  main.rs  misc.rs  self vs super.rs  string_os.rs  struct_as_string.rs  sync.rs  syntax.rs
src/deftype/: enum_def_val.rs
src/fs/: path.rs
src/helper/: helper.rs
src/parser/: chumsky.rs  key.rs
src/str/: re.rs
src/tests/: test_target.rs
src/wasm/: example_prime_app.rs  gloo_event_listener_button_click.rs  paint.rs  user_agent.rs
