[package]
name       	= "various"
description	= "Test various snippets"
version    	= "0.1.0"
edition    	= "2021"
license    	= "MIT"

[dependencies]
colored     	= "2.0.4" # colored output for the cli
# futures   	= {version="0.3", features=["executor","thread-pool"]}
# grep-regex	= "0.1.9"
# lazy-regex	= "2.2.2"
# regex     	= "1.3.3"
[[test]]
name = "test_target"
path = "src/tests/test_target.rs"
