[package]
name       	= "various"
description	= "Test various snippets"
version    	= "0.1.0"
edition    	= "2021"
license    	= "MIT"
build      	= "build.rs"

[workspace]
members = ["helper"]	# relative to the workspace root

[build-dependencies]
helper     	= {path="helper"}
phf        	= {version="0.11.1",default-features=false} # generate Rust source for PHF data structures at compile time
phf_codegen	= "0.11.1"

[dependencies]
helper       	= {path="helper"}
bitflags     	= "2.3.3"
chumsky      	= {git="https://github.com/zesterer/chumsky",version="1.0.0-alpha.4"}
colored      	= "2.0.4" # colored output for the cli
enum-iterator	= "1.4.1"
indexmap     	= "2.0.0"
phf          	= {version="0.11",features=["macros"]}
# futures    	= {version="0.3", features=["executor","thread-pool"]}
# grep-regex 	= "0.1.9"
# lazy-regex 	= "2.2.2"
# regex      	= "1.3.3"
[[test]]
name = "test_target"
path = "src/tests/test_target.rs"
